# calculadora

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml
docs/: PRD.md
scripts/: gen-icon.mjs  seed-indices.mjs
seed/: indices-seed.json
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: entry.rs  indices.rs  main.rs  storage.rs
src/js/: app.js  backend.js  engine.js  model.js  pdf.js
tests/: engine.test.mjs  model.test.mjs  pdf.test.mjs  ui.smoke.test.mjs
